# CPP-Strong-Types-Toolchain

./: .gitignore  LICENSE  README.md
.github/workflows/: TestCI.yml
StrongTypeTool/: .clang-format  CMakeLists.txt  Schema.yaml  main.cpp
StrongTypeTool/src/: CMakeLists.txt  Config.cpp  Config.h  Config.in.h  GenerationConfig.cpp  GenerationConfig.h  Generator.cpp  Generator.h  StrongTypeToolMain.cpp
StrongTypeTool/src/Deserializer/: CMakeLists.txt  Deserializer.h  YamlDeserializer.cpp  YamlDeserializer.h
StrongTypeTool/src/Entities/: BinaryOperation.cpp  BinaryOperation.h  CMakeLists.txt  StrongLiteral.cpp  StrongLiteral.h  StrongType.cpp  StrongType.h  StrongTypeSet.cpp  StrongTypeSet.h  UnaryOperation.cpp  UnaryOperation.h
StrongTypeTool/src/Serializer/: CMakeLists.txt  CMakeListsSerializer.cpp  CMakeListsSerializer.h  CPPHSerializer.cpp  CPPHSerializer.h  CPPSerializer.cpp  CPPSerializer.h  HeaderOnlySerializer.cpp  HeaderOnlySerializer.h  LiteralHSerializer.cpp  LiteralHSerializer.h  LiteralHeaderOnlySerializer.cpp  LiteralHeaderOnlySerializer.h  LiteralSerializer.cpp  LiteralSerializer.h  TemplateManager.cpp  TemplateManager.h  YamlSerializer.cpp  YamlSerializer.h
StrongTypeTool/src/Serializer/Templates/: T_BinaryAssignmentOp.txt  T_BinaryAssignmentOpH.txt  T_BinaryOp.txt  T_BinaryOpH.txt  T_ClassH.txt  T_ClassHOnly.txt  T_Include.txt  T_Literal.txt  T_LiteralH.txt  T_LiteralOp.txt  T_LiteralOpH.txt  T_UnaryOp.txt  T_UnaryOpH.txt
StrongTypeTool/src/Validation/: CMakeLists.txt  ValidationResult.h  ValidationRule.h  Validator.cpp  Validator.h
StrongTypeTool/src/Validation/Rules/: BinaryAssignmentTypeRule.cpp  BinaryAssignmentTypeRule.h  CMakeLists.txt  EmptyFieldsRule.cpp  EmptyFieldsRule.h  LiteralsArgTypeRule.cpp  LiteralsArgTypeRule.h  LiteralsResTypeRule.cpp  LiteralsResTypeRule.h
StrongTypeTool/sys_tests/AverageSpeed/: CMakeLists.txt  StrongTypes.yaml  main.cpp
StrongTypeTool/sys_tests/AverageVelocity/: StrongTypes.yaml  main.cpp
StrongTypeTool/sys_tests/DistanceSum/: CMakeLists.txt  StrongTypes.yaml  main.cpp
StrongTypeTool/sys_tests/InvalidConfigurations/: BinaryAssignment.yaml  EmptyFields.yaml  LiteralsArgType.yaml  LiteralsResType.yaml  StrongTypes-MissingField.yaml
StrongTypeTool/sys_tests/SpeedLimit/: CMakeLists.txt  StrongTypes.yaml  main.cpp
StrongTypeTool/sys_tests/SpeedLimitLiterals/: CMakeLists.txt  StrongTypes.yaml  main.cpp
StrongTypeTool/tst/: CMakeLists.txt  Test.cpp
StrongTypeTool/tst/Deserializer/: YamlDeserializerTest.cpp
StrongTypeTool/tst/Entities/: BinaryOperationTest.cpp  StrongLiteralTest.cpp  StrongTypeSetTest.cpp  StrongTypeTest.cpp  UnaryOperationTest.cpp
StrongTypeTool/tst/Serializer/: CMakeListsSerializerTest.cpp  CPPHSerializerTest.cpp  CPPSerializerTest.cpp  HeaderOnlySerializerTest.cpp  LiteralHSerializer.cpp  LiteralHeaderOnlySerializerTest.cpp  LiteralSerializer.cpp  YamlSerializer.cpp
StrongTypeTool/tst/TestConfigurations/: test-config-short.yaml  test-config.yaml
StrongTypeTool/tst/Validation/: ValidationResultTest.cpp  ValidatorTest.cpp
StrongTypeTool/tst/Validation/Rules/: BinaryAssignmentTypeRuleTest.cpp  EmptyFieldsRuleTest.cpp  LiteralsArgTypeRuleTest.cpp  LiteralsResTypeRuleTest.cpp
